--- a/Template.Web/Features/Richiesta/Richiesta.cshtml
+++ b/Template.Web/Features/Richiesta/Richiesta.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Template.Web.Features.Richiesta.RichiestaViewModel
 @{
-     ViewData["Title"] = "Richiesta Permessi/Ferie";
+    ViewData["Title"] = "Richiesta Permessi/Ferie";
 }
 
 <!DOCTYPE html>
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <style>
         .custom-container {
-            max-width: 800px; 
+            max-width: 800px;
         }
     </style>
 </head>
@@ -24,7 +24,12 @@
             <i class="bi bi-house-door"></i> Torna alla Home
         </a>
 
-        
+
+        <div class="d-flex justify-content-end">
+            <button onclick="window.location.href='@Url.Action("Storico", "Richiesta")'" class="btn btn-primary btn-mg">Storico (solo per verifica)</button>
+        </div>
+
+
         <h1 class="text-center mb-4">Richiesta Permessi/Ferie</h1>
 
         @if (TempData["Message"] != null)
@@ -86,29 +91,19 @@
             </div>
 
             <div v-if="tipologia == 'Ferie'" class="row mb-3">
-               <div class="col-md-12">
-                  <label asp-for="DataInizio" class="form-label" >Data Inizio:</label> 
-                    <input v-model="dataInizio" asp-for="DataInizio" type="date" class="form-control" value="" /> 
-               </div> 
-               <div class="col-md-12"> 
-                   <label asp-for="DataFine" class="form-label" style="padding-top: 10px;">Data Fine:</label> 
-                   <input v-model="dataFine" asp-for="DataFine" type="date" class="form-control" value="dataFine" /> 
-              </div> 
-             </div> 
+                <div class="col-md-12">
+                    <label asp-for="DataInizio" class="form-label">Data Inizio:</label>
+                    <input v-model="dataInizio" asp-for="DataInizio" type="date" class="form-control" value="" />
+                </div>
+                <div class="col-md-12">
+                    <label asp-for="DataFine" class="form-label" style="padding-top: 10px;">Data Fine:</label>
+                    <input v-model="dataFine" asp-for="DataFine" type="date" class="form-control" value="dataFine" />
+                </div>
+            </div>
 
             <div class="d-flex justify-content-end">
                 <button type="submit" class="btn btn-primary btn-lg">Invia</button>
             </div>
-
-
-            @if (User.IsInRole("Manager"))
-            {
-                <div class="container-fluid bg-light bottom-0 w-100 text-center p-3 mt-5">
-                    <p>Gestisci qui le richieste dei dipendenti del team:</p>
-                    <button onclick="window.location.href='@Url.Action("Storico","Richiesta")'" class="btn btn-primary btn-mg">Gestisci Richieste</button>
-                </div>
-            }
-
         </form>
     </div>
 
@@ -161,7 +156,7 @@
             watch: {
                 dataInizio(newValue) {
                     if (!this.dataFine) {
-                        this.dataFine = newValue;  
+                        this.dataFine = newValue;
                     }
                 }
             },
@@ -176,7 +171,7 @@
         });
     </script>
 
- 
+
 
 
 </body>
