--- a/Template.Web/Features/Richiesta/Richiesta.cshtml
+++ b/Template.Web/Features/Richiesta/Richiesta.cshtml
@@ -8,13 +8,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Richiesta Permessi/Ferie</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <style>
         .custom-container {
             max-width: 800px;
+        }
+
+        .alert-custom {
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -24,13 +27,11 @@
             <i class="bi bi-house-door"></i> Torna alla Home
         </a>
 
-
         <div class="d-flex justify-content-end">
             <button onclick="window.location.href='@Url.Action("Storico", "Richiesta")'" class="btn btn-primary btn-mg">Storico (solo per verifica)</button>
         </div>
 
-
-        <h1 class="text-center mb-4">Richiesta Permessi/Ferie</h1>
+        <h1 class="text-left mb-4">Richiesta Permessi/Ferie</h1>
 
         @if (TempData["Message"] != null)
         {
@@ -53,7 +54,7 @@
         }
 
         <!-- Area per mostrare i messaggi di errore -->
-        <div v-if="errorMessage" class="alert alert-danger" role="alert">
+        <div v-if="errorMessage" class="alert alert-danger alert-custom" role="alert">
             {{ errorMessage }}
         </div>
 
@@ -82,7 +83,7 @@
                 <div class="row mb-3">
                     <div class="col-md-12">
                         <label asp-for="DataInizio" class="form-label" style="padding-top: 10px;">Data</label>
-                        <input v-model="dataInizio" asp-for="DataInizio" type="date" class="form-control" value="" />
+                        <input v-model="dataInizio" asp-for="DataInizio" type="date" class="form-control" :value="dataInizio" />
                     </div>
                     <div class="col-md-12">
                         <input v-model="dataFine" asp-for="DataFine" type="hidden" class="form-control" value="dataFine" />
@@ -93,11 +94,11 @@
             <div v-if="tipologia == 'Ferie'" class="row mb-3">
                 <div class="col-md-12">
                     <label asp-for="DataInizio" class="form-label">Data Inizio:</label>
-                    <input v-model="dataInizio" asp-for="DataInizio" type="date" class="form-control" value="" />
+                    <input v-model="dataInizio" asp-for="DataInizio" type="date" class="form-control" :value="dataInizio" />
                 </div>
                 <div class="col-md-12">
                     <label asp-for="DataFine" class="form-label" style="padding-top: 10px;">Data Fine:</label>
-                    <input v-model="dataFine" asp-for="DataFine" type="date" class="form-control" value="dataFine" />
+                    <input v-model="dataFine" asp-for="DataFine" type="date" class="form-control" :value="dataFine" />
                 </div>
             </div>
 
@@ -115,7 +116,6 @@
         </form>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         new Vue({
             el: '#app',
@@ -128,6 +128,20 @@
                 errorMessage: '' // Variabile per mostrare i messaggi di errore
             },
             methods: {
+                // Verifica se la data è sabato o domenica
+                checkWeekend() {
+                    const dataFields = ['dataInizio', 'dataFine'];
+                    dataFields.forEach(field => {
+                        const date = new Date(this[field]);
+                        const day = date.getDay(); // 0 = Domenica, 6 = Sabato
+
+                        if (day === 0 || day === 6) {
+                            this.errorMessage = 'Non puoi selezionare giorno del weekend';
+                            this[field] = ''; // Cancella la data selezionata
+                        }
+                    });
+                },
+
                 validateForm(event) {
                     this.errorMessage = ''; // Resetta il messaggio di errore
 
@@ -166,10 +180,14 @@
                     if (!this.dataFine) {
                         this.dataFine = newValue;
                     }
+                    this.checkWeekend(); // Controlla se la data è un sabato o una domenica
+                },
+                dataFine(newValue) {
+                    this.checkWeekend(); // Controlla se la data è un sabato o una domenica
                 }
             },
             mounted() {
-               var tempMessage = '@TempData["Message"]';
+                var tempMessage = '@TempData["Message"]';
                 if (tempMessage !== '') {
                     var successModal = new bootstrap.Modal(document.getElementById('successModal'));
                     successModal.show();
@@ -178,9 +196,5 @@
             }
         });
     </script>
-
-
-
-
 </body>
 </html>
