--- a/Template.Web/Features/Richiesta/Storico.cshtml
+++ b/Template.Web/Features/Richiesta/Storico.cshtml
@@ -31,7 +31,7 @@
                         <th>Ora Inizio</th>
                         <th>Ora Fine</th>
                         <th>Stato</th>
-                        <th v-if="isManager">Azioni</th>
+                        <th v-if="isManager && hasPendingRequests">Azioni</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -49,7 +49,7 @@
                         </td>
                         <td v-if="isManager && richiesta.stato === 'Da Approvare'" class="text-center">
                             <button class="btn btn-success btn-sm me-1" v-on:click="gestisciRichiesta(richiesta.id, 'Approva')">
-                                Approva
+                                Accetta
                             </button>
                             <button class="btn btn-danger btn-sm" v-on:click="gestisciRichiesta(richiesta.id, 'Rifiuta')">
                                 Rifiuta
@@ -73,13 +73,19 @@
             richieste: @Html.Raw(Json.Serialize(Model)),
             isManager: @User.IsInRole("Manager").ToString().ToLower()
         },
+        computed: {
+            // Check if there are any pending requests (Da Approvare)
+            hasPendingRequests() {
+                return this.richieste.some(richiesta => richiesta.stato === 'Da Approvare');
+            }
+        },
         methods: {
             formatDate(date) {
                 return new Date(date).toLocaleDateString('it-IT');
             },
             getBadgeClass(stato) {
                 switch (stato) {
-                    case 'Approvata': return 'bg-success';
+                    case 'Accettata': return 'bg-success';
                     case 'Rifiutata': return 'bg-danger';
                     default: return 'bg-primary';
                 }
@@ -110,7 +116,7 @@
 
             aggiornaRichieste() {
                 // Recupera le richieste aggiornate dal server
-                fetch('/Richiesta/Lista') 
+                fetch('/Richiesta/Lista')
                     .then(response => response.json())
                     .then(data => {
                         this.richieste = data;
@@ -122,5 +128,3 @@
         }
     });
 </script>
-
-
