--- a/Template.Web/Features/Richiesta/Richiesta.cshtml
+++ b/Template.Web/Features/Richiesta/Richiesta.cshtml
@@ -8,16 +8,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Richiesta Permessi/Ferie</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <style>
         .custom-container {
             max-width: 800px;
-        }
-
-        .alert-custom {
-            margin-top: 10px;
         }
     </style>
 </head>
@@ -27,9 +24,11 @@
             <i class="bi bi-house-door"></i> Torna alla Home
         </a>
 
+
         <div class="d-flex justify-content-end">
             <button onclick="window.location.href='@Url.Action("Storico", "Richiesta")'" class="btn btn-primary btn-mg">Storico (solo per verifica)</button>
         </div>
+
 
         <h1 class="text-left mb-4">Richiesta Permessi/Ferie</h1>
 
@@ -54,7 +53,7 @@
         }
 
         <!-- Area per mostrare i messaggi di errore -->
-        <div v-if="errorMessage" class="alert alert-danger alert-custom" role="alert">
+        <div v-if="errorMessage" class="alert alert-danger" role="alert">
             {{ errorMessage }}
         </div>
 
@@ -83,7 +82,7 @@
                 <div class="row mb-3">
                     <div class="col-md-12">
                         <label asp-for="DataInizio" class="form-label" style="padding-top: 10px;">Data</label>
-                        <input v-model="dataInizio" asp-for="DataInizio" type="date" class="form-control" :value="dataInizio" />
+                        <input v-model="dataInizio" asp-for="DataInizio" type="date" class="form-control" value="" />
                     </div>
                     <div class="col-md-12">
                         <input v-model="dataFine" asp-for="DataFine" type="hidden" class="form-control" value="dataFine" />
@@ -94,11 +93,11 @@
             <div v-if="tipologia == 'Ferie'" class="row mb-3">
                 <div class="col-md-12">
                     <label asp-for="DataInizio" class="form-label">Data Inizio:</label>
-                    <input v-model="dataInizio" asp-for="DataInizio" type="date" class="form-control" :value="dataInizio" />
+                    <input v-model="dataInizio" asp-for="DataInizio" type="date" class="form-control" value="" />
                 </div>
                 <div class="col-md-12">
                     <label asp-for="DataFine" class="form-label" style="padding-top: 10px;">Data Fine:</label>
-                    <input v-model="dataFine" asp-for="DataFine" type="date" class="form-control" :value="dataFine" />
+                    <input v-model="dataFine" asp-for="DataFine" type="date" class="form-control" value="dataFine" />
                 </div>
             </div>
 
@@ -116,6 +115,7 @@
         </form>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         new Vue({
             el: '#app',
@@ -128,7 +128,6 @@
                 errorMessage: '' // Variabile per mostrare i messaggi di errore
             },
             methods: {
-                // Verifica se la data è sabato o domenica
                 checkWeekend() {
                     const dataFields = ['dataInizio', 'dataFine'];
                     dataFields.forEach(field => {
@@ -141,7 +140,6 @@
                         }
                     });
                 },
-
                 validateForm(event) {
                     this.errorMessage = ''; // Resetta il messaggio di errore
 
@@ -187,7 +185,7 @@
                 }
             },
             mounted() {
-                var tempMessage = '@TempData["Message"]';
+               var tempMessage = '@TempData["Message"]';
                 if (tempMessage !== '') {
                     var successModal = new bootstrap.Modal(document.getElementById('successModal'));
                     successModal.show();
@@ -196,5 +194,9 @@
             }
         });
     </script>
+
+
+
+
 </body>
 </html>
