removed unused files and added history filter

--- a/Template.Web/Features/History/History.cshtml
+++ b/Template.Web/Features/History/History.cshtml
@@ -41,6 +41,7 @@
                     <select id="filterStatus" class="form-select" onchange="applyFilter()" style="width: 130px;">
                         <option value="" disabled selected>Filtri</option>
                         <option value="Tutti">Tutti</option>
+                        <option value="Da Approvare">Da Approvare</option>
                         <option value="Accettata">Accettata</option>
                         <option value="Rifiutata">Rifiutata</option>
                     </select>
