--- a/Template.Web/Features/Richiesta/Richiesta.cshtml
+++ b/Template.Web/Features/Richiesta/Richiesta.cshtml
@@ -26,7 +26,7 @@
 
 
         <div class="d-flex justify-content-end">
-            <button onclick="window.location.href='@Url.Action("Storico", "Richiesta")'" class="btn btn-primary btn-mg">Verifica stato delle richieste</button>
+            <button onclick="window.location.href='@Url.Action("RichiesteInArrivo", "Richiesta")'" class="btn btn-primary btn-mg">Verifica stato delle richieste</button>
         </div>
 
 
@@ -109,7 +109,7 @@
             {
                 <div class="container-fluid bg-light bottom-0 w-100 text-center p-3 mt-5">
                     <p>Gestisci qui le richieste dei dipendenti del team:</p>
-                    <button onclick="window.location.href='@Url.Action("Storico","Richiesta")'" class="btn btn-primary btn-mg">Gestisci Richieste</button>
+                    <button onclick="window.location.href='@Url.Action("RichiesteInArrivo","Richiesta")'" class="btn btn-primary btn-mg">Gestisci Richieste</button>
                 </div>
             }
         </form>
@@ -194,9 +194,6 @@
             }
         });
     </script>
-
-
-
 
 </body>
 </html>
